testdata/invalid/basic_invalid_06.lisp
;;error:4:21-22:unknown symbol
(defcolumns (X :i16))

(defconstraint c () Y)
